--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,12 @@ spring.application.name=REST_API_WITH_JPA
 
 
 # Data base configuration
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/RestAPI
-spring.datasource.username=root
-spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/REST_API
+#spring.datasource.username=root
+#spring.datasource.password=password
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
 
 # server port
 server.port=4040
@@ -26,6 +26,11 @@ spring.cache.type=redis
 # Redis host and port
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+spring.main.allow-bean-definition-overriding=true
+spring.data.redis.database=0
+# Prevent Spring Boot from trying to auto-configure a DataSource
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
 #spring.cache.type=simple
 
 
